fix small layout bugs for mobile

--- a/styleguide/css/oldie.css
+++ b/styleguide/css/oldie.css
@@ -705,7 +705,6 @@ select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}
 .mycpnb-intro__title span{display:block;color:#fff}
 .mycpnb-contact,.mycpnb-profile{display:block;position:relative;background:#fff;width:300px;-webkit-flex:1 1 300px;-ms-flex:1 1 300px;flex:1 1 300px;border-bottom:7px solid rgba(93,170,220,.9)}
 .mycpnb-contact__address,.mycpnb-profile__avatar{width:100%;height:300px;position:relative;overflow:hidden;background-size:cover;background-position:center 20%;background-color:rgba(93,170,220,.9);color:#fff}
-.mycpnb-profile__avatar{filter:url("data:image/svg+xml;utf8,&lt;svg xmlns='http://www.w3.org/2000/svg'&gt;&lt;filter id='grayscale'&gt;&lt;feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");filter:gray;-webkit-filter:grayscale(100%)}
 .mycpnb-profile__content{padding:10px 30px 30px}
 .mycpnb-contact__address{padding:40px 30px 20px}
 .mycpnb-contact__address label{display:block;font-weight:700;margin-top:20px}
