--- a/styleguide/css/theme.css
+++ b/styleguide/css/theme.css
@@ -561,7 +561,6 @@ select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}
 .block-campaign-publications label,.block-campaigninfo label,.block-campaignmaterial label,.block-campaigntopics label{color:rgba(93,170,220,.9);font-size:14px;display:block;font-weight:700}
 .campaignmaterial__buttons{margin-top:30px}
 .campaignmaterial__buttons .button{font-size:1em;padding:.5em 2em;margin-bottom:10px;width:100%}
-.campaigntopics__list{-webkit-column-count:3;-moz-column-count:3;column-count:3}
 .campaigntopics__item{margin-bottom:5px;line-height:1.5;display:block}
 .campaign-publications{margin-top:20px}
 .campaign-publications__text{background-color:#e6e6e6;font-weight:400;-webkit-flex:0 1 50%;-ms-flex:0 1 50%;flex:0 1 50%;padding:20px 30px;font-size:14px}
@@ -597,9 +596,8 @@ select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}
 .mycpnb-intro__title span{display:block;color:#fff}
 .mycpnb-contact,.mycpnb-profile{display:block;position:relative;background:#fff;width:300px;-webkit-flex:1 1 300px;-ms-flex:1 1 300px;flex:1 1 300px;border-bottom:7px solid rgba(93,170,220,.9)}
 .mycpnb-contact__address,.mycpnb-profile__avatar{width:100%;height:300px;position:relative;overflow:hidden;background-size:cover;background-position:center 20%;background-color:rgba(93,170,220,.9);color:#fff}
-.mycpnb-profile__avatar{filter:url("data:image/svg+xml;utf8,&lt;svg xmlns='http://www.w3.org/2000/svg'&gt;&lt;filter id='grayscale'&gt;&lt;feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");filter:gray;-webkit-filter:grayscale(100%)}
-.mycpnb-profile__content{padding:10px 30px 30px}
-.mycpnb-contact__address{padding:40px 30px 20px}
+.mycpnb-profile__content{padding:10px 20px 30px}
+.mycpnb-contact__address{padding:40px 20px 20px}
 .mycpnb-contact__address label{display:block;font-weight:700;margin-top:20px}
 .mycpnb-contact__address p{margin-top:0}
 .mycpnb-contact__content{padding:30px}
@@ -748,6 +746,7 @@ select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}
 .flexbox .campaigndata__item.campaigndata__item--full{-webkit-flex-basis:66%;-ms-flex-preferred-size:66%;flex-basis:66%}
 .block-campaign-publications,.block-campaigninfo,.block-campaignmaterial,.block-campaigntopics{padding:30px 30px 40px}
 .campaignmaterial__buttons .button{margin-right:20px;margin-bottom:0;width:auto}
+.campaigntopics__list{-webkit-column-count:3;-moz-column-count:3;column-count:3}
 .campaign-publications{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-content:center;-ms-flex-line-pack:center;align-content:center}
 .campaign-publications__button a:before{top:12px}
 .campaign-publications__button a:after{top:17px}
@@ -763,6 +762,7 @@ select:-moz-focusring{color:transparent;text-shadow:0 0 0 #000}
 .flexbox .section-contact{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between}
 .no-flexbox .mycpnb--wrapper:after,.no-flexbox .mycpnb--wrapper:before{content:'';display:table}
 .no-flexbox .mycpnb--wrapper:after{clear:both}
+.mycpnb-contact__address,.mycpnb-profile__content{padding-left:30px;padding-right:30px}
 .form-campaign-feedback{padding:30px}}
 @media screen and (min-width:960px){.l-page{padding-top:100px}
 .table th{padding:20px}
